--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 
-ATLAS_URI=mongodb+srv://Anish1:ankita2213@cluster0-teidf.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://Anks:ankita2213@cluster0-2tjnd.azure.mongodb.net/test?retryWrites=true&w=majority
